# Yolov11Proyect

./: .gitignore  README.md  pyproject.toml  test.py  test_tracking.py
poetry-demo/: pyproject.toml
src/facial_recognition/: embeddingTest.py  face_recognition.py  main.py  metadata.py  test_face_recognition.py
src/tests/: test.py  test_gpu.py  test_tkinter.py  test_tracking.py
