[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Ignacio <meloignacionicolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.3.27"
filterpy = "^1.4.5"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
